; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_receive_flags_reply.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_receive_flags_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_lkb = type { i32, i32 }
%struct.dlm_message = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dlm_lkb*, %struct.dlm_message*)* @receive_flags_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @receive_flags_reply(%struct.dlm_lkb* %0, %struct.dlm_message* %1) #0 {
  %3 = alloca %struct.dlm_lkb*, align 8
  %4 = alloca %struct.dlm_message*, align 8
  store %struct.dlm_lkb* %0, %struct.dlm_lkb** %3, align 8
  store %struct.dlm_message* %1, %struct.dlm_message** %4, align 8
  %5 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %6 = getelementptr inbounds %struct.dlm_message, %struct.dlm_message* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %9 = getelementptr inbounds %struct.dlm_lkb, %struct.dlm_lkb* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %11 = getelementptr inbounds %struct.dlm_lkb, %struct.dlm_lkb* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, -65536
  %14 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %15 = getelementptr inbounds %struct.dlm_message, %struct.dlm_message* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 65535
  %18 = or i32 %13, %17
  %19 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %20 = getelementptr inbounds %struct.dlm_lkb, %struct.dlm_lkb* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
